# Smaran

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/smaran/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/smaran/: AudioConverter.kt  Constants.kt  MainActivity.kt  NetworkMonitor.kt  Screen.kt  SmaranNavGraph.kt  TokenStorage.kt  WhisperContext.kt
app/src/main/java/com/example/smaran/api/: Constants.kt  MemoryRepository.kt  SilkTtsService.kt  SmaranApiService.kt
app/src/main/java/com/example/smaran/ask/: AskScreen.kt  AskViewModel.kt
app/src/main/java/com/example/smaran/auth/: AuthScreen.kt  AuthViewModel.kt
app/src/main/java/com/example/smaran/profile/: ProfileScreen.kt  ProfileViewModel.kt
app/src/main/java/com/example/smaran/record/: RecordScreen.kt  RecordViewModel.kt
app/src/main/java/com/example/smaran/review/: ReviewScreen.kt  ReviewViewModel.kt
app/src/main/java/com/example/smaran/ui/theme/: Color.kt  SmaranColors.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/smaran/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
